SFDC Automation/src/objects/Ryder_Survey_Question__c.object
<CustomObject>
    <description>This object lists all the questions asked in the survey software and provides a detailed view on which ones are part of scores and trend summaries.  If there is a difference between versions of the survey, the questions may change in terms of text and sequence.  This object captures this to ensure the calculations are performed on the correct questions.</description>
    <fields>
        <fullName>CSI_Calculation_Indicator__c</fullName>
        <description>The Customer Satisfaction Index will be calculated if the indicator is set.  The Index will not be calculated if the indicator is not set.</description>
        <inlineHelpText>Determines if the question should be calculated in the score.</inlineHelpText>
        <label>CSI Calculation Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuestionKey__c</fullName>
        <externalId>true</externalId>
        <label>ClickTool Question Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>The question number associated to the question in the resulting survey.</description>
        <inlineHelpText>The question number associated to the question in the resulting survey.</inlineHelpText>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>The verbiage of the question in the survey.</description>
        <inlineHelpText>The verbiage of the question in the survey.</inlineHelpText>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Weight__c</fullName>
        <description>The percentage of how the question should be used in the score.  The weight the question holds in the score.</description>
        <inlineHelpText>The weight the question holds in the score calculation.</inlineHelpText>
        <label>Question Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ryder_Survey_Question_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ryder Survey Question Category</label>
        <referenceTo>Ryder_Survey_Question_Category__c</referenceTo>
        <relationshipLabel>Ryder Survey Questions</relationshipLabel>
        <relationshipName>Ryder_Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Class__c</fullName>
        <description>The type of survey being conducted.</description>
        <inlineHelpText>The type of survey being conducted.</inlineHelpText>
        <label>Survey Class</label>
        <picklist>
            <picklistValues>
                <fullName>CSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Last_Build_Date__c</fullName>
        <description>The last date the survey was updated/built/deployed in ClickTools.  This is important to denote new question numbers and new sequences.</description>
        <inlineHelpText>The last date the survey was updated/built/deployed in ClickTools.</inlineHelpText>
        <label>Survey Last Build Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <description>Name of the survey that is stored in ClickTools or any other survey solution software</description>
        <inlineHelpText>Reference name of the survey in the survey software</inlineHelpText>
        <label>Survey Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend_Summary_Indicator__c</fullName>
        <description>Identifier that determines if the question is part of the trend summary.</description>
        <inlineHelpText>Identifier that determines if the question is part of the trend summary.</inlineHelpText>
        <label>Trend Summary Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trend_Summary_Sequence__c</fullName>
        <description>The sequence used to calculate the trend summary.</description>
        <inlineHelpText>The sequence used to calculate the trend summary.</inlineHelpText>
        <label>Trend Summary Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Ryder Survey Question</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Ryder Survey Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ryder Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>